--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon src/app.ts",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "update-db": "prisma db push"
+    "updatedb": "prisma db push"
   },
   "author": "NlightN22 <oncharterliz@gmail.com>",
   "license": "MIT",
@@ -40,6 +40,7 @@
     "i18next": "^23.8.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "jwt-decode": "^4.0.0",
     "openid-client": "^5.6.4",
     "passport-jwt": "^4.0.1",
     "winston": "^3.11.0",
