--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
     "start": "ts-node src/app.ts",
     "dev": "nodemon src/app.ts",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "dotenv -e .env.test -- tap --node-arg=--require=ts-node/register",
+    "teststudio": "dotenv -e .env.test -- yarn prisma studio",
     "updatedb": "prisma db push"
   },
   "author": "NlightN22 <oncharterliz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/accept-language-parser": "^1.5.6",
     "@types/node": "^20.11.16",
     "@types/openid-client": "^3.7.0",
+    "@types/tap": "^15.0.11",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "eslint": "^8.56.0",
     "pino-pretty": "^10.3.1",
     "prisma": "^5.9.1",
+    "sinon": "^17.0.1",
+    "tap": "^18.7.0",
+    "ts-mock-imports": "^1.3.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
@@ -47,5 +53,11 @@
     "zod": "^3.22.4",
     "zod-i18n-map": "^2.27.0",
     "zod-to-json-schema": "^3.22.4"
+  },
+  "resolutions": {
+    "strip-ansi": "6.0.0"
+  },
+  "tap": {
+    "timeout": 60
   }
 }
