--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/accept-language-parser": "^1.5.6",
     "@types/node": "^20.11.16",
     "@types/openid-client": "^3.7.0",
+    "@types/sinon": "^17.0.3",
     "@types/tap": "^15.0.11",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
