--- a/package.json
+++ b/package.json
@@ -17,42 +17,44 @@
   "author": "NlightN22 <oncharterliz@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
+    "@faker-js/faker": "^9.4.0",
     "@types/accept-language-parser": "^1.5.6",
-    "@types/node": "^20.11.16",
+    "@types/node": "^22.13.0",
     "@types/openid-client": "^3.7.0",
     "@types/sinon": "^17.0.3",
-    "@types/tap": "^15.0.11",
+    "@types/tap": "^18.0.0",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "eslint": "^8.56.0",
-    "pino-pretty": "^10.3.1",
-    "prisma": "^5.9.1",
-    "sinon": "^17.0.1",
-    "tap": "^18.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
+    "eslint": "^9.19.0",
+    "pino-pretty": "^13.0.0",
+    "prisma": "^6.3.0",
+    "sinon": "^19.0.2",
+    "tap": "^21.0.1",
     "ts-mock-imports": "^1.3.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^2.1.0",
-    "@fastify/websocket": "^8.3.1",
-    "@prisma/client": "^5.9.1",
+    "@fastify/cors": "^10.0.2",
+    "@fastify/rate-limit": "^10.2.2",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.1",
+    "@fastify/websocket": "^11.0.2",
+    "@prisma/client": "^6.3.0",
     "accept-language-parser": "^1.5.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.2",
-    "fastify": "^4.26.0",
+    "fastify": "^5.2.1",
     "fastify-zod": "^1.4.0",
-    "i18next": "^23.8.2",
+    "i18next": "^24.2.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "jwt-decode": "^4.0.0",
-    "openid-client": "^5.6.4",
+    "openid-client": "^6.1.7",
     "passport-jwt": "^4.0.1",
     "qs": "^6.14.0",
+    "strip-ansi": "7.1.0",
     "winston": "^3.11.0",
     "zod": "^3.22.4",
     "zod-i18n-map": "^2.27.0",
