--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,13 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "typeRoots": [
+      "./src/types"
+    ],
   },
   "include": [
     "src/**/*",
-    "types/**/*"
+    "src/types/**/*"
   ],
   "exclude": [
     "node_modules"
