--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ext .ts",
     "test": "dotenv -e .env.test -- tap --node-arg=--require=ts-node/register",
     "test-no-coverage": "dotenv -e .env.test -- tap --node-arg=--require=ts-node/register --disable-coverage",
+    "migration": "ts-node prisma/migration_mongo1.ts",
     "studio": "yarn prisma studio",
     "updatedb": "prisma db push"
   },
@@ -42,6 +43,7 @@
     "@fastify/swagger-ui": "^5.2.1",
     "@fastify/websocket": "^11.0.2",
     "@prisma/client": "^6.3.0",
+    "@types/mongodb": "^4.0.7",
     "accept-language-parser": "^1.5.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.2",
@@ -51,6 +53,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "jwt-decode": "^4.0.0",
+    "mongodb": "^6.13.1",
     "openid-client": "^6.1.7",
     "passport-jwt": "^4.0.1",
     "qs": "^6.14.0",
